--- a/core/new-gui/src/app/workspace/component/property-editor/property-editor.component.html
+++ b/core/new-gui/src/app/workspace/component/property-editor/property-editor.component.html
@@ -1,5 +1,5 @@
 <div
-  [hidden]="!isOperatorSelected"
+  [hidden]="!frameComponentConfig"
   cdkDrag
   id="property-editor-container"
   nz-resizable
