--- a/core/new-gui/src/app/workspace/component/property-editor/property-editor.component.scss
+++ b/core/new-gui/src/app/workspace/component/property-editor/property-editor.component.scss
@@ -19,10 +19,6 @@
   user-select: none;
   background: white;
   border-radius: 3px;
-  box-shadow:
-    0 3px 1px -2px #0003,
-    0 2px 2px #00000024,
-    0 1px 5px #0000001f;
 }
 
 #right-panel-content {
@@ -44,4 +40,11 @@
 
 .texera-workspace-property-editor-body {
   padding: 16px;
+}
+
+.shadow {
+  box-shadow:
+    0 3px 1px -2px #0003,
+    0 2px 2px #00000024,
+    0 1px 5px #0000001f;
 }
