--- a/core/new-gui/src/app/workspace/component/workflow-editor/mini-map/mini-map.component.html
+++ b/core/new-gui/src/app/workspace/component/workflow-editor/mini-map/mini-map.component.html
@@ -1,5 +1,4 @@
-<div
-  id="mini-map-container">
+<div id="mini-map-container">
   <div
     id="mini-map-content"
     [hidden]="!display">
@@ -11,16 +10,17 @@
         cdkDragBoundary="texera-mini-map"
         (cdkDragMoved)="onDrag($event)"
         (cdkDragStarted)="dragging=true"
-        (cdkDragEnded)="dragging=false">
-      </div>
+        (cdkDragEnded)="dragging=false"></div>
     </div>
   </div>
-  <button 
+  <button
     nz-button
     id="minimap-button"
     nzType="default"
     nzSize="large"
     (click)="toggle()">
-    <span nz-icon nzType="compass"></span>
+    <span
+      nz-icon
+      nzType="compass"></span>
   </button>
 </div>
